--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.19.2",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
+    "mongo": "^0.1.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
