--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "paypal-rest-sdk": "^1.8.1",
     "stream": "^0.0.3",
     "stripe": "^16.9.0",
     "validator": "^13.12.0",
